# errors

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .isort.cfg  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
ci/: bootstrap.py
ci/templates/: .appveyor.yml
docs/: conf.py  index.rst  installation.rst  mixin_errorlist.rst  return_value.rst  usage.rst
docs/reference/: base.rst  errors.rst  index.rst  listerrors.rst
src/errors/: __init__.py  __main__.py  base.py  cli.py  data_classes.py  error.py  mixin.py  settings.py
tests/: test_enumerator.py  test_errors.py  test_return_value.py
