[metadata]
name = error-manager
version = 1.3.3
description = Manage error codes, descriptions and data in a unified way throughout a project
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/markdown
url = https://github.com/MaartendeRuyter/errors
author = Maarten de Ruyter
author_email = "Maarten de Ruyter" <maarten@geodatagarden.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires = 

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.12
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = errors
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/errors
    */site-packages/errors

[tox:tox]
envlist = py312
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov

commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

[testenv:docs]
basepython = python3
deps =
    sphinx
    sphinx-rtd-theme
allowlist_externals = sphinx-build
commands =
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/